src-tauri/tests/snapshots/pipeline_streams__stream_replay@codex__captured-command.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/codex/captured-command.jsonl
---
line_count: 111
checkpoint_count: 6
checkpoints:
  - line_index: 12
    event_type: item/completed
    roles: []
    last_part_types: []
  - line_index: 15
    event_type: item/completed
    roles: []
    last_part_types: []
  - line_index: 33
    event_type: item/completed
    roles:
      - assistant
    last_part_types:
      - text
  - line_index: 37
    event_type: item/completed
    roles:
      - assistant
    last_part_types:
      - text
      - tool-call
  - line_index: 105
    event_type: item/completed
    roles:
      - assistant
    last_part_types:
      - text
      - tool-call
      - text
  - line_index: 109
    event_type: turn/completed
    roles:
      - assistant
      - system
    last_part_types:
      - text
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 4
persisted_turns:
  turn_count: 3
  total_blocks: 0
  turns:
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
    - role: assistant
      block_types: []
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - text
        - tool-call
        - text
