src-tauri/tests/snapshots/pipeline_streams__stream_replay@codex__plan-item.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/codex/plan-item.jsonl
---
line_count: 9
checkpoint_count: 3
checkpoints:
  - line_index: 4
    event_type: item/completed
    roles: []
    last_part_types: []
  - line_index: 5
    event_type: item/completed
    roles:
      - assistant
    last_part_types:
      - plan-review
  - line_index: 7
    event_type: turn/completed
    roles:
      - assistant
      - system
    last_part_types:
      - text
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 2
persisted_turns:
  turn_count: 1
  total_blocks: 0
  turns:
    - role: assistant
      block_types: []
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - plan-review
