src-tauri/tests/snapshots/pipeline_streams__stream_replay@codex__plan-mode.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/codex/plan-mode.jsonl
---
line_count: 7
checkpoint_count: 2
checkpoints:
  - line_index: 3
    event_type: turn/plan/updated
    roles:
      - assistant
    last_part_types:
      - todo-list
  - line_index: 5
    event_type: turn/completed
    roles:
      - assistant
      - system
    last_part_types:
      - text
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 2
persisted_turns:
  turn_count: 0
  total_blocks: 0
  turns: []
historical_render:
  message_count: 0
  messages: []
