src-tauri/tests/snapshots/pipeline_streams__stream_replay@codex__turn-failed.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/codex/turn-failed.jsonl
---
line_count: 7
checkpoint_count: 2
checkpoints:
  - line_index: 4
    event_type: item/completed
    roles: []
    last_part_types: []
  - line_index: 5
    event_type: turn/completed
    roles:
      - system
    last_part_types:
      - text
final_state:
  message_count: 1
  roles:
    - system
  total_parts: 1
persisted_turns:
  turn_count: 1
  total_blocks: 0
  turns:
    - role: error
      block_types: []
historical_render:
  message_count: 1
  messages:
    - role: system
      part_types:
        - text
